// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cypress Generator should render empty test correctly 1`] = `
<div
  className="sc-ifAKCX iILkrY"
>
  <div
    className="fd-input testSuite"
  >
    <div
      className="input"
    >
      <input
        id="testSuite"
        maxLength={null}
        minLength={null}
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Test suite name"
        type="text"
        value=""
      />
      <label
        htmlFor="testSuite"
      >
        Test suite name
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="input-message"
      />
    </div>
  </div>
  <div
    className="fd-input testDescription"
  >
    <div
      className="input"
    >
      <input
        id="testDescription"
        maxLength={null}
        minLength={null}
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Description"
        type="text"
        value=""
      />
      <label
        htmlFor="testDescription"
      >
        Description
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      >
        Please enter a description for your test
      </div>
      <div
        className="input-message"
      />
    </div>
  </div>
  <textarea
    onChange={[Function]}
    placeholder="Start using the website to record some events"
    readOnly={false}
    spellCheck={false}
    value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test Suite ...', () => {
  

  afterEach(() => {
    cy.clearCookies();
  });

  it('should ...', () => {
  });
});
"
  />
  <div
    className="sc-EHOje gXMykk"
  >
    <button
      className="fd-button  selected"
      onClick={[Function]}
      title="Show code"
    >
      Code
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      title="Show events"
    >
      Events
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      title="Show headers"
    >
      Headers
    </button>
    <label
      className="basic-auth"
    >
      <input
        checked={false}
        onChange={[MockFunction]}
        type="checkbox"
      />
       
      Basic Auth
    </label>
  </div>
</div>
`;

exports[`Cypress Generator should render events correctly 1`] = `
<div
  className="sc-ifAKCX iILkrY"
>
  <div
    className="fd-input testSuite"
  >
    <div
      className="input"
    >
      <input
        id="testSuite"
        maxLength={null}
        minLength={null}
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Test suite name"
        type="text"
        value=""
      />
      <label
        htmlFor="testSuite"
      >
        Test suite name
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="input-message"
      />
    </div>
  </div>
  <div
    className="fd-input testDescription"
  >
    <div
      className="input"
    >
      <input
        id="testDescription"
        maxLength={null}
        minLength={null}
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Description"
        type="text"
        value=""
      />
      <label
        htmlFor="testDescription"
      >
        Description
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      >
        Please enter a description for your test
      </div>
      <div
        className="input-message"
      />
    </div>
  </div>
  <textarea
    onChange={[Function]}
    placeholder="Start using the website to record some events"
    readOnly={false}
    spellCheck={false}
    value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test Suite ...', () => {
  beforeEach(() => {
    cy.visit('http://willemliu.nl');
    cy.clearCookies();
    cy.reload(true);
  });

  afterEach(() => {
    cy.clearCookies();
  });

  it('should ...', () => {
    cy.viewport(320, 240);
    cy.visit('http://willemliu.nl');
  });
});
"
  />
  <div
    className="sc-EHOje gXMykk"
  >
    <button
      className="fd-button  selected"
      onClick={[Function]}
      title="Show code"
    >
      Code
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      title="Show events"
    >
      Events
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      title="Show headers"
    >
      Headers
    </button>
    <label
      className="basic-auth"
    >
      <input
        checked={false}
        onChange={[MockFunction]}
        type="checkbox"
      />
       
      Basic Auth
    </label>
  </div>
</div>
`;

exports[`Cypress Generator should render headers correctly 1`] = `
<div
  className="sc-ifAKCX iILkrY"
>
  <div
    className="fd-input testSuite"
  >
    <div
      className="input"
    >
      <input
        id="testSuite"
        maxLength={null}
        minLength={null}
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Test suite name"
        type="text"
        value=""
      />
      <label
        htmlFor="testSuite"
      >
        Test suite name
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="input-message"
      />
    </div>
  </div>
  <div
    className="fd-input testDescription"
  >
    <div
      className="input"
    >
      <input
        id="testDescription"
        maxLength={null}
        minLength={null}
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Description"
        type="text"
        value=""
      />
      <label
        htmlFor="testDescription"
      >
        Description
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      >
        Please enter a description for your test
      </div>
      <div
        className="input-message"
      />
    </div>
  </div>
  <textarea
    onChange={[Function]}
    placeholder="Start using the website to record some events"
    readOnly={false}
    spellCheck={false}
    value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test Suite ...', () => {
  beforeEach(() => {
    cy.visit('http://willemliu.nl');
    cy.clearCookies();
    cy.reload(true);
  });

  afterEach(() => {
    cy.clearCookies();
  });

  it('should ...', () => {
    cy.viewport(320, 240);
    cy.visit('http://willemliu.nl', {headers: {\\"Content-type\\": \\"application/json\\", \\"x-platform\\": \\"Android\\"}});
  });
});
"
  />
  <div
    className="sc-EHOje gXMykk"
  >
    <button
      className="fd-button  selected"
      onClick={[Function]}
      title="Show code"
    >
      Code
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      title="Show events"
    >
      Events
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      title="Show headers"
    >
      Headers
    </button>
    <label
      className="basic-auth"
    >
      <input
        checked={false}
        onChange={[MockFunction]}
        type="checkbox"
      />
       
      Basic Auth
    </label>
  </div>
</div>
`;

exports[`Cypress Generator should render test with suite name and description correctly 1`] = `
<div
  className="sc-ifAKCX iILkrY"
>
  <div
    className="fd-input testSuite"
  >
    <div
      className="input"
    >
      <input
        id="testSuite"
        maxLength={null}
        minLength={null}
        name="testSuite"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Test suite name"
        type="text"
        value="Test suite name"
      />
      <label
        htmlFor="testSuite"
      >
        Test suite name
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      >
        Please enter a name for your test suite
      </div>
      <div
        className="input-message"
      />
    </div>
  </div>
  <div
    className="fd-input testDescription"
  >
    <div
      className="input"
    >
      <input
        id="testDescription"
        maxLength={null}
        minLength={null}
        name="testDescription"
        onChange={[Function]}
        onInvalid={[Function]}
        placeholder=" "
        required={false}
        title="Description"
        type="text"
        value="Test description"
      />
      <label
        htmlFor="testDescription"
      >
        Description
         
        <i
          className="icon-check"
        />
      </label>
      <div
        className="input-message error-message"
      >
        Please enter a description for your test
      </div>
      <div
        className="input-message"
      />
    </div>
  </div>
  <textarea
    onChange={[Function]}
    placeholder="Start using the website to record some events"
    readOnly={false}
    spellCheck={false}
    value="/**
  * Code generated with Fd Cypress Recorder.
  * https://github.com/FDMediagroep/fd-cypress-recorder
  */

/// <reference types=\\"Cypress\\" />
describe('Test suite name', () => {
  

  afterEach(() => {
    cy.clearCookies();
  });

  it('Test description', () => {
  });
});
"
  />
  <div
    className="sc-EHOje gXMykk"
  >
    <button
      className="fd-button  selected"
      onClick={[Function]}
      title="Show code"
    >
      Code
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      title="Show events"
    >
      Events
    </button>
    <button
      className="fd-button"
      onClick={[Function]}
      title="Show headers"
    >
      Headers
    </button>
    <label
      className="basic-auth"
    >
      <input
        checked={false}
        onChange={[MockFunction]}
        type="checkbox"
      />
       
      Basic Auth
    </label>
  </div>
</div>
`;
